slowdebug build broken by JDK-8205714

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • openjdk7u
    • Affects Version/s: openjdk7u
    • Component/s: hotspot
    • b00
    • master
    • generic
    • generic

       hotspot/src/share/vm/runtime/sharedRuntime.cpp:1214:48: error: ‘class klassOopDesc’ has no member named ‘is_linked’; did you mean ‘is_locked’?
      assert(callee_method->method_holder()->is_linked(), "must be");

      assert was missed when testing with a product build, but it needs to be cast on OpenJDK 7 using instanceKlass::cast, as was done with other instances in this backport.

            Assignee:
            Andrew Hughes
            Reporter:
            Andrew Hughes
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: