8218798: slowdebug build broken by JDK-8205714

Add missing instanceKlass::cast in assert

Reviewed-by: andrew